<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLeaderBoard"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.cs646.sdsu.tapnsolve.LeaderBoardActivity">

        <TextView
            android:id="@+id/id_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/app_name"
            android:textSize="42sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:background="@drawable/border_black"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/id_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_app_title"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/leader_board"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/title"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/id_leaderboard">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reem_kufi"
                android:text="@string/rank"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reem_kufi"
                android:text="@string/user_stats"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reem_kufi"
                android:text="@string/score"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/id_empty_leaderboard_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/empty_leader_board"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/id_leaderboard_container"
            android:orientation="vertical"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_leaderboard_container"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>
