<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGameBoard"
    tools:context="com.cs646.sdsu.tapnsolve.GameBoardActivity">

    <include layout="@layout/layout_title"
        android:id="@+id/id_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/id_toggle_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/id_app_title"
        android:gravity="center">

        <Switch
            android:id="@+id/id_toggle_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:theme="@style/SCBSwitch"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/sound" />

        <Switch
            android:id="@+id/id_toggle_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:theme="@style/SCBSwitch"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/vibration" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_timer_container"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toggle_buttons"
        android:layout_alignStart="@id/id_puzzle_container"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_timer"
            android:contentDescription="" />

        <Chronometer
            android:id="@+id/id_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/id_count_down_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/timer_placeholder"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_moves_container"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toggle_buttons"
        android:layout_alignEnd="@id/id_puzzle_container"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/id_moves_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/moves_placeholder"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_touch_app"
            android:contentDescription="" />

    </LinearLayout>


    <GridLayout
        android:id="@+id/id_puzzle_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_below="@+id/id_timer_container"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/grid_shape">

    </GridLayout>


    <LinearLayout
        android:id="@+id/id_options_container"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_puzzle_container"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/id_start_pause_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/start"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/id_reset_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/reset"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <include layout="@layout/layout_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
